objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Non-Target</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Requested Services &lt; 2 yrs</fullName>
                </value>
                <value>
                    <fullName>Current Search Client</fullName>
                </value>
                <value>
                    <fullName>Currently Billing</fullName>
                </value>
                <value>
                    <fullName>Prepare for Deletion</fullName>
                </value>
                <value>
                    <fullName>Prospect Partner</fullName>
                </value>
                <value>
                    <fullName>Former Client &lt; 2 yrs</fullName>
                </value>
                <value>
                    <fullName>Dormant Client &gt; 2 yrs</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Non-Target</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Software</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adaptive Planning</fullName>
                </value>
                <value>
                    <fullName>Adaptive Insights</fullName>
                </value>
                <value>
                    <fullName>Anaplan</fullName>
                </value>
                <value>
                    <fullName>Blackline</fullName>
                </value>
                <value>
                    <fullName>BPC</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Epicore</fullName>
                </value>
                <value>
                    <fullName>GreatPlains</fullName>
                </value>
                <value>
                    <fullName>Hadoop</fullName>
                </value>
                <value>
                    <fullName>Host Analytics</fullName>
                </value>
                <value>
                    <fullName>Planful</fullName>
                </value>
                <value>
                    <fullName>Hyperion Financial Management</fullName>
                </value>
                <value>
                    <fullName>Hyperion Essbase</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
                <value>
                    <fullName>Microsoft AX Dynamics</fullName>
                </value>
                <value>
                    <fullName>Dynamics 365</fullName>
                </value>
                <value>
                    <fullName>Navision</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle R12</fullName>
                </value>
                <value>
                    <fullName>Oracle Fusion</fullName>
                </value>
                <value>
                    <fullName>Oracle PBCS</fullName>
                </value>
                <value>
                    <fullName>JD Edwards</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>PowerBI</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>QAD</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Culture_Perks__c</fullName>
        <label>Culture/Perks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>Physical City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_City__c</fullName>
        <label>Corporate City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <label>Physical Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Rating__c</fullName>
        <label>Priority Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Street__c</fullName>
        <label>Corporate Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Physical Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Country__c</fullName>
        <label>Corporate Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Allocation__c</fullName>
        <label>Company Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Range__c</fullName>
        <label>Annual Revenue Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50M</fullName>
                </value>
                <value>
                    <fullName>$50M-$100M</fullName>
                </value>
                <value>
                    <fullName>$100M-$250M</fullName>
                </value>
                <value>
                    <fullName>$250M-$500M</fullName>
                </value>
                <value>
                    <fullName>$500M-$1B</fullName>
                </value>
                <value>
                    <fullName>$1B+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Linked_In_Profile_Name__c</fullName>
        <label>Linked In Profile Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_State_Province__c</fullName>
        <label>Physical State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_State_Province__c</fullName>
        <label>Corporate State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Zip_Postal_Code__c</fullName>
        <label>Physical Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Zip_Postal_Code__c</fullName>
        <label>Corporate Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone_Number__c</fullName>
        <label>Billing Contact Phone Number</label>
        <type>Phone</type>
    </fields>
</CustomObject>